# getSequence

./: .gitignore  .lgtm.yml  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.cfg  setup.py
.github/: CONTRIBUTING.md
.github/workflows/: CI.yaml
devtools/: README.md
docs/: Makefile  README.md  api.rst  conf.py  getting_started.rst  index.rst  make.bat
docs/usage/: command-line.rst  using-in-python.rst
getSequence/: __init__.py  _version.py  get_sequence.py  getseq.py  getsequence_exceptions.py  vis_sequence.py
getSequence/scripts/: getseq.py
getSequence/tests/: test_getSequence.py
scripts/: getseq  visseq
